[tool.poetry]
name = "distflow-state-estimation"
version = "0.1.0"
description = ""
authors = ["Tomasini Luca <luca.tomasini@heig-vd.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
polars = "^1.15.0"
duckdb = "^1.1.3"
dynaconf = "^3.2.6"
patito = "^0.8.2"
sphinx = "^8.1.3"
nbsphinx = "^0.9.5"
myst-parser = "^4.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = "^3.0.2"
ghp-import = "^2.1.0"
pyocclient = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
