[tool.poetry]
name = "distflow-state-estimation"
version = "0.1.0"
description = ""
authors = ["Tomasini Luca <luca.tomasini@heig-vd.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
polars = "^1.15.0"
duckdb = "^1.1.3"
dynaconf = "^3.2.6"
sphinx = "^8.1.3"
nbsphinx = "^0.9.5"
myst-parser = "^4.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = "^3.0.2"
ghp-import = "^2.1.0"
pyocclient = "^0.6"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
more-itertools = "^10.5.0"
utility-function = {git = "git@github.com:heig-vd-ie/utility-functions.git"}
numba = "^0.60.0"
pandapower = "^2.14.11"
python-graphblas = "^2024.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
